# tvg-rendering

./: .gitignore  CMakeLists.txt  README.md
include/glad/: glad.h
models/dinning-table/: dining-table.mtl
models/kitchen-stove/: kitchen-stove.mtl
shaders/: fragment.glsl  vertex.glsl
src/: glad.c  main.cpp
